@@ -1,3 +1,9 @@
+2011-07-24 Borut Razem <borut.razem AT gmail.com>
+
+	* support/regression/test/bitfields.c:
+	  fixed a regtest failure on Solaris i386 host with gcc 4.6
+	  by turning off the -O2 optimization
+
 2011-07-23 Borut Razem <borut.razem AT gmail.com>
 
 	* debugger/mcs51/acinclude.m4, debugger/mcs51/configure: fix for solaris
